# Source file covered by the GNU Public License v3 
# See LICENSE file or <http://gplv3.fsf.org/>

nobase_dist_pkgdata_DATA = VeraBd.ttf VeraMono.ttf VeraSeBd.ttf \
			   intro/background.png intro/bloc.bmp intro/camembert.png \
			   intro/firefox.png intro/fleche.bmp intro/Tux.png \
			   intro/ligne.bmp intro/xsw.xsw
